old version archive codepen link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+archive
+https://codepen.io/ivanshavliuga/pen/ReBbyr
+-->
 <html>
 <head>
 <title>Find of Number</title>
@@ -52,7 +56,7 @@
 			<input type=label name="Sc" class="scores" disabled value="0">
 			<input type=label name="Ts" class="timer" disabled value="0">
 			<input type=label name="Fs" class="undef" disabled value="0">
-			
+
 		</form>
     <p> Нужно найти четырехзначное число из матрицы чисел 5х5.  Числа генерируются рандомом (случайно). <b>Нужно найти то число, которое совпадает с числом внизу (рядом с кнопкой new).</b> </p>
 	</div>
